# artbit

./: .ansible-lint  .flake8  .gitignore  .pre-commit-config.yaml  .yamllint  README.md  ansible.cfg  client.py  inventory  pyproject.toml  pyrightconfig.json  requirements.yml  server.py
.github/actions/: setup-poetry.yaml
.github/actions/setup-poetry/: action.yaml
.github/workflows/: check.yaml  consumer.yml  infra.yml  producer.yml  test.yaml
artbit/: __main__.py  schemas.py
artbit-go/: .golangci.yaml  go.mod  go.sum
artbit-go/cmd/artbit/: main.go
artbit-go/internal/kernel/: connector.go  kernel.go
artbit-go/module/kernelfx/: module.go
artbit-go/module/nullfx/: module.go
artbit-go/module/plotfx/: module.go
artbit-go/module/randomfx/: module.go
artbit-go/module/udsfx/: module.go
artbit/network/: mac.py  scanner.py  vendor.py
artbit/plugins/: base.py  stdin.py  uds.py
artbit/sensors/: grove_fingerclip.py  grove_led.py  wfe_sensor.py
artbit/sound/: adapter.py  player.py  presets.py  soundboard.py
artbit/stream/: base.py  rmq.py  sensor.py
client/: __main__.py  producer.py  sensor.py
consumer/: README.md  pyproject.toml  pyrightconfig.json  ruff.toml
consumer/app/: __main__.py  cli.py  singleton.py
hack/: stream_data  stream_plot
inventory/: raspberrypi.py
playbooks/: fetch.yml  local.yml  raspberrypi.yml  setup.yml
producer/: .golangci.yaml  README.md  go.sum
scripts/: create-service.sh
server/: __main__.py  consumer.py  player.py
shared/: rmq.py  schemas.py
test/: conftest.py
test/sound/: test_preset.py
(+58 files in other folders)
