[tool.poetry]
name = "artbit"
package-mode = false
version = "0.1.0"
description = "Create art with heartbeats over the internet"
authors = ["Eelis Kostiainen <eelis@kostiainen.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.26.4"
pika = "1.3.2"
pygame = "2.5.2"
smbus2 = "0.4.3"
ansible-core = "^2.17.5"
rpi-gpio = {version = "^0.7.1", markers = "platform_system == 'Linux'"}
gpiozero = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.381"
ruff = "^0.6.7"
pytest = "^8.3.3"
ansible-dev-tools = "^24.10.0"
ansible-lint = {version = "^24.9.2", markers = "platform_system != 'Windows'"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
